fix too wide of level-left filter content on nexus 7

--- a/what2do2day/static/assets/css/style.css
+++ b/what2do2day/static/assets/css/style.css
@@ -775,6 +775,11 @@ nav.level.is-primary .level-item {
     justify-content: flex-start;
 }
 
+.filter.level-left{
+    display: block;
+    width: calc(100vw - 90px);
+}
+
 .count-in-text {
     width: 100%;
 }
@@ -1535,6 +1540,10 @@ i.not-shared {
 
     .count-in-text {
         width: 230px;
+    }
+
+    .filter.level-left{
+        display: flex;
     }
 
 }
